--- a/src/app/mayoristas/list-m/list-m.component.html
+++ b/src/app/mayoristas/list-m/list-m.component.html
@@ -1,5 +1,5 @@
 <div class="row my-4">
-    <div class="col-12">
+    <div class="col-11 mx-auto">
         <nav aria-label="breadcrumb" role="navigation">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a routerLink="/dashboard">Dashboard</a></li>
